Move to esql folder, remove subclient usage

--- a/notebooks/esql/esql-getting-started.ipynb
+++ b/notebooks/esql/esql-getting-started.ipynb
@@ -231,19 +231,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "id": "Tht3ghy8dlkX"
-   },
-   "outputs": [],
-   "source": [
-    "# Create ES|QL client instance\n",
-    "\n",
-    "esql = EsqlClient(client)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "id": "nkFLjdQzcPjQ"
@@ -325,7 +312,7 @@
     "\n",
     "esql_query = \"FROM sample_data\"\n",
     "\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -371,7 +358,7 @@
     "| LIMIT 3\n",
     "\"\"\"\n",
     "\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -419,7 +406,7 @@
     "| SORT @timestamp DESC\n",
     "\"\"\"\n",
     "\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -462,7 +449,7 @@
     "| WHERE event_duration > 5000000\n",
     "\"\"\"\n",
     "\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -506,7 +493,7 @@
     "| WHERE message LIKE \"Connected*\"\n",
     "\"\"\"\n",
     "\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -567,7 +554,7 @@
     "| LIMIT 3\n",
     "\"\"\"\n",
     "\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -624,7 +611,7 @@
     "| EVAL duration_ms = event_duration/1000000.0\n",
     "\"\"\"\n",
     "\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -670,7 +657,7 @@
     "| EVAL duration_ms = ROUND(event_duration/1000000.0, 1)\n",
     "\"\"\"\n",
     "\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -714,7 +701,7 @@
     "| STATS median_duration = MEDIAN(event_duration)\n",
     "\"\"\"\n",
     "\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -754,7 +741,7 @@
     "| STATS median_duration = MEDIAN(event_duration), max_duration = MAX(event_duration)\n",
     "\"\"\"\n",
     "\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -797,7 +784,7 @@
     "| STATS median_duration = MEDIAN(event_duration) BY client_ip\n",
     "\"\"\"\n",
     "\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -847,7 +834,7 @@
     "| EVAL event_duration/1000000.0\n",
     "\"\"\"\n",
     "\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -887,7 +874,7 @@
     "| EVAL event_duration/1000000.0\n",
     "| STATS MEDIAN(`event_duration/1000000.0`)\n",
     "\"\"\"\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -937,7 +924,7 @@
     "| KEEP @timestamp\n",
     "| EVAL bucket = AUTO_BUCKET (@timestamp, 24, \"2023-10-23T00:00:00Z\", \"2023-10-23T23:59:59Z\")\n",
     "\"\"\"\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -979,7 +966,7 @@
     "| EVAL bucket = AUTO_BUCKET (@timestamp, 24, \"2023-10-23T00:00:00Z\", \"2023-10-23T23:59:59Z\")\n",
     "| STATS COUNT(*) BY bucket\n",
     "\"\"\"\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -1021,7 +1008,7 @@
     "| EVAL bucket = AUTO_BUCKET (@timestamp, 24, \"2023-10-23T00:00:00Z\", \"2023-10-23T23:59:59Z\")\n",
     "| STATS median_duration = MEDIAN(event_duration) BY bucket\n",
     "\"\"\"\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -1150,7 +1137,7 @@
     "| EVAL client_ip = TO_STRING(client_ip)\n",
     "| ENRICH clientip_policy ON client_ip WITH env\n",
     "\"\"\"\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -1194,7 +1181,7 @@
     "| ENRICH clientip_policy ON client_ip WITH env\n",
     "| STATS median_duration = MEDIAN(event_duration) BY env\n",
     "\"\"\"\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -1260,7 +1247,7 @@
     "FROM sample_data\n",
     "| DISSECT message \"Connected to %{server_ip}\"\n",
     "\"\"\"\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
@@ -1305,7 +1292,7 @@
     "| DISSECT message \"Connected to %{server_ip}\"\n",
     "| STATS COUNT(*) BY server_ip\n",
     "\"\"\"\n",
-    "response = esql.query(query=esql_query)\n",
+    "response = client.esql.query(query=esql_query)\n",
     "format_response(response)"
    ]
   },
