LTR notebook: fix conclusion

--- a/notebooks/search/08-learning-to-rank.ipynb
+++ b/notebooks/search/08-learning-to-rank.ipynb
@@ -1163,10 +1163,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-      "We can see that the `title_bm25` and `popularity` features are weighted more importantly in our trained model.  Now all results include the query terms in the title, outlining the importance of the `title_bm25` feature in the model. Similarly, more popular movies now rank higher, for example `Star Wars: Episode I - The Phantom Menace` is now in third position."
+    "As also shown in the feature importance graph above, we can see in this results list that the `title_bm25` and `popularity` features are weighted highly in our trained model. Now all results include the query terms in the title, showing the importance of the `title_bm25` feature. Similarly, more popular movies now rank higher, for example `Rogue One: A Star Wars Story` is now in sixth position."
    ]
-    }
-    
+  }
  ],
  "metadata": {
   "colab": {
