Adds Cohere inference service notebook.

--- a/notebooks/search/07-inference.ipynb
+++ b/notebooks/search/07-inference.ipynb
@@ -5,12 +5,12 @@
    "id": "7a765629",
    "metadata": {},
    "source": [
-    "# Semantic Search using the Inference API\n",
+    "# Semantic Search using the Inference API with the OpenAI service\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/search/07-inference.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/search/07-inference-openai.ipynb)\n",
     "\n",
     "\n",
-    "Learn how to use the [Inference API](https://www.elastic.co/guide/en/elasticsearch/reference/current/inference-apis.html) for semantic search."
+    "Learn how to use the [Inference API](https://www.elastic.co/guide/en/elasticsearch/reference/current/inference-apis.html) with the OpenAI service for semantic search."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "source": [
     "# Install packages and connect with Elasticsearch Client\n",
     "\n",
-    "To get started, we'll need to connect to our Elastic deployment using the Python client.\n",
+    "To get started, we'll need to connect to our Elastic deployment using the Python client (version 8.12.0 or above).\n",
     "Because we're using an Elastic Cloud deployment, we'll use the **Cloud ID** to identify our deployment.\n",
     "\n",
     "First we need to `pip` install the following packages:\n",
@@ -81,7 +81,7 @@
    "source": [
     "from elasticsearch import Elasticsearch, helpers, exceptions\n",
     "from urllib.request import urlopen\n",
-    "import getpass\n",
+    "from getpass import getpass\n",
     "import json\n",
     "import time"
    ]
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = getpass.getpass(\"OpenAI API key:  \")\n",
+    "API_KEY = getpass(\"OpenAI API key:  \")\n",
     "\n",
     "client.inference.put_model(\n",
     "    task_type=\"text_embedding\",\n",
