--- a/notebooks/integrations/cohere/inference-cohere.ipynb
+++ b/notebooks/integrations/cohere/inference-cohere.ipynb
@@ -301,7 +301,7 @@
     "            \"plot_embedding\": {\n",
     "                \"type\": \"dense_vector\",\n",
     "                \"dims\": 1024,\n",
-    "                \"element_type\": \"float\",\n",
+    "                \"element_type\": \"byte\",\n",
     "            },\n",
     "            \"plot\": {\"type\": \"text\"},\n",
     "        }\n",
