Add tech preview warning

--- a/notebooks/esql/esql-getting-started.ipynb
+++ b/notebooks/esql/esql-getting-started.ipynb
@@ -30,7 +30,9 @@
     "- Access columns\n",
     "- Create a histogram\n",
     "- Enrich data\n",
-    "- Process data"
+    "- Process data\n",
+    "\n",
+    "> ⚠️ Do not use ES|QL on production environments. This functionality is in **technical preview** and may be changed or removed in a future release. Elastic will work to fix any issues, but features in technical preview are not subject to the support SLA of official GA features."
    ]
   },
   {
