black formatting and adding getpass

--- a/supporting-blog-content/keeping-your-index-current/local_testing.ipynb
+++ b/supporting-blog-content/keeping-your-index-current/local_testing.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import os\n",
+    "from getpass import getpass\n",
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
     "from elasticsearch import Elasticsearch, helpers"
@@ -22,10 +22,14 @@
    "outputs": [],
    "source": [
     "def connect_to_nasa():\n",
-    "    url = 'https://api.nasa.gov/neo/rest/v1/feed'\n",
-    "    nasa_api_key = os.getenv('NASA_API_KEY')\n",
+    "    url = \"https://api.nasa.gov/neo/rest/v1/feed\"\n",
+    "    nasa_api_key = getpass(\"NASA API Key: \")\n",
     "    today = datetime.now()\n",
-    "    params = {'api_key': nasa_api_key, 'start_date': today - timedelta(days=7), 'end_date': datetime.now()}\n",
+    "    params = {\n",
+    "        \"api_key\": nasa_api_key,\n",
+    "        \"start_date\": today - timedelta(days=7),\n",
+    "        \"end_date\": datetime.now(),\n",
+    "    }\n",
     "    return requests.get(url, params).json()"
    ]
   },
@@ -48,12 +52,12 @@
    "source": [
     "def create_df(response):\n",
     "    all_objects = []\n",
-    "    for date, objects in response['near_earth_objects'].items():\n",
+    "    for date, objects in response[\"near_earth_objects\"].items():\n",
     "        for obj in objects:\n",
-    "            obj['close_approach_date'] = date \n",
+    "            obj[\"close_approach_date\"] = date\n",
     "            all_objects.append(obj)\n",
     "    df = pd.json_normalize(all_objects)\n",
-    "    return df.drop('close_approach_data', axis=1)"
+    "    return df.drop(\"close_approach_data\", axis=1)"
    ]
   },
   {
@@ -311,8 +315,8 @@
    "outputs": [],
    "source": [
     "def connect_to_elastic():\n",
-    "    elastic_cloud_id = os.getenv(\"ELASTIC_CLOUD_ID\")\n",
-    "    elastic_api_key = os.getenv(\"ELASTIC_API_KEY\")\n",
+    "    elastic_cloud_id = getpass(\"Elastic Cloud ID: \")\n",
+    "    elastic_api_key = getpass(\"Elastic API Key: \")\n",
     "    return Elasticsearch(cloud_id=elastic_cloud_id, api_key=elastic_api_key)"
    ]
   },
@@ -358,7 +362,7 @@
     "def doc_generator(df, index_name):\n",
     "    for index, document in df.iterrows():\n",
     "        yield {\n",
-    "            \"_index\": index_name, \n",
+    "            \"_index\": index_name,\n",
     "            \"_id\": f\"{document['id']}\",\n",
     "            \"_source\": document.to_dict(),\n",
     "        }"
@@ -394,13 +398,11 @@
    "source": [
     "def updated_last(es, index_name):\n",
     "    query = {\n",
-    "    \"size\": 0, \n",
-    "    \"aggs\": {\n",
-    "        \"last_date\": {\n",
-    "            \"max\": {\n",
-    "                \"field\": \"close_approach_date\"}}}}\n",
+    "        \"size\": 0,\n",
+    "        \"aggs\": {\"last_date\": {\"max\": {\"field\": \"close_approach_date\"}}},\n",
+    "    }\n",
     "    response = es.search(index=index_name, body=query)\n",
-    "    last_updated_date_string = response['aggregations']['last_date']['value_as_string']\n",
+    "    last_updated_date_string = response[\"aggregations\"][\"last_date\"][\"value_as_string\"]\n",
     "    datetime_obj = datetime.strptime(last_updated_date_string, \"%Y-%m-%dT%H:%M:%S.%fZ\")\n",
     "    return datetime_obj.strftime(\"%Y-%m-%d\")"
    ]
@@ -433,17 +435,20 @@
    "source": [
     "def update_new_data(df, es, last_update_date, index_name):\n",
     "    if isinstance(last_update_date, str):\n",
-    "        last_update_date = datetime.strptime(last_update_date, '%Y-%m-%d')  \n",
-    "    \n",
+    "        last_update_date = datetime.strptime(last_update_date, \"%Y-%m-%d\")\n",
+    "\n",
     "    last_update_date = pd.Timestamp(last_update_date).normalize()\n",
-    "    \n",
-    "    if not df.empty and 'close_approach_date' in df.columns:\n",
-    "        df['close_approach_date'] = pd.to_datetime(df['close_approach_date'])\n",
-    "    \n",
+    "\n",
+    "    if not df.empty and \"close_approach_date\" in df.columns:\n",
+    "        df[\"close_approach_date\"] = pd.to_datetime(df[\"close_approach_date\"])\n",
+    "\n",
     "    today = pd.Timestamp(datetime.now().date()).normalize()\n",
-    "    \n",
+    "\n",
     "    if df is not None and not df.empty:\n",
-    "        update_range = df.loc[(df['close_approach_date'] > last_update_date) & (df['close_approach_date'] < today)]\n",
+    "        update_range = df.loc[\n",
+    "            (df[\"close_approach_date\"] > last_update_date)\n",
+    "            & (df[\"close_approach_date\"] < today)\n",
+    "        ]\n",
     "        if not update_range.empty:\n",
     "            helpers.bulk(es, doc_generator(update_range, index_name))\n",
     "        else:\n",
