Add comment to clarify getpass usage

--- a/notebooks/esql/esql-getting-started.ipynb
+++ b/notebooks/esql/esql-getting-started.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "from elasticsearch import Elasticsearch\n",
     "from elasticsearch.helpers import bulk\n",
-    "from getpass import getpass"
+    "from getpass import getpass  # standard library module for secure credential input"
    ]
   },
   {
