Fix colab button in esql-getting-started.ipynb
Fixes classic URL error

--- a/notebooks/esql/esql-getting-started.ipynb
+++ b/notebooks/esql/esql-getting-started.ipynb
@@ -6,7 +6,7 @@
     "id": "yfVx1CGq7dZU"
    },
    "source": [
-    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/elastic/notebooks/esql/esql-getting-started.ipynb.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/esql/esql-getting-started.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
