--- a/notebooks/integrations/cohere/inference-cohere.ipynb
+++ b/notebooks/integrations/cohere/inference-cohere.ipynb
@@ -3,46 +3,58 @@
   {
    "cell_type": "markdown",
    "id": "7a765629",
-   "metadata": {},
+   "metadata": {
+    "id": "7a765629"
+   },
    "source": [
-    "# Semantic Search using the Inference API with the OpenAI service\n",
+    "# Semantic Search using the Inference API with the Cohere service\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/search/07-inference.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/integrations/cohere/inference-cohere.ipynb)\n",
     "\n",
-    "\n",
-    "Learn how to use the [Inference API](https://www.elastic.co/guide/en/elasticsearch/reference/current/inference-apis.html) with the OpenAI service for semantic search."
+    "Learn how to use the [Inference API](https://www.elastic.co/guide/en/elasticsearch/reference/current/inference-apis.html) for semantic search."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f9101eb9",
-   "metadata": {},
+   "id": "9c99b06d",
+   "metadata": {
+    "id": "9c99b06d"
+   },
    "source": [
     "# 🧰 Requirements\n",
     "\n",
     "For this example, you will need:\n",
     "\n",
-    "- An Elastic deployment:\n",
+    "- An Elastic deployment with minimum **4GB machine learning node**\n",
     "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "   \n",
-    "- A paid [OpenAI account](https://openai.com/) is required to use the Inference API with \n",
-    "the OpenAI service as the OpenAI free trial API usage is limited. "
+    "- A paid [Cohere account](https://cohere.com/) is required to use the Inference API with\n",
+    "the Cohere service as the Cohere free trial API usage is limited."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4cd69cc0",
-   "metadata": {},
+   "id": "15193c10",
+   "metadata": {
+    "id": "15193c10"
+   },
    "source": [
     "# Create Elastic Cloud deployment\n",
     "\n",
-    "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial."
+    "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
+    "\n",
+    "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
+    "   - Under **Advanced settings**, go to **Machine Learning instances**\n",
+    "   - You'll need at least **4GB** RAM per zone for this tutorial\n",
+    "   - Select **Create deployment**"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f27dffbf",
-   "metadata": {},
+   "metadata": {
+    "id": "f27dffbf"
+   },
    "source": [
     "# Install packages and connect with Elasticsearch Client\n",
     "\n",
@@ -58,7 +70,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8c4b16bc",
-   "metadata": {},
+   "metadata": {
+    "id": "8c4b16bc"
+   },
    "outputs": [],
    "source": [
     "!pip install elasticsearch"
@@ -67,19 +81,23 @@
   {
    "cell_type": "markdown",
    "id": "41ef96b3",
-   "metadata": {},
+   "metadata": {
+    "id": "41ef96b3"
+   },
    "source": [
     "Next, we need to import the modules we need. 🔐 NOTE: getpass enables us to securely prompt the user for credentials without echoing them to the terminal, or storing it in memory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "690ff9af",
-   "metadata": {},
+   "metadata": {
+    "id": "690ff9af"
+   },
    "outputs": [],
    "source": [
-    "from elasticsearch import Elasticsearch, helpers, exceptions\n",
+    "from elasticsearch import Elasticsearch, helpers\n",
     "from urllib.request import urlopen\n",
     "from getpass import getpass\n",
     "import json\n",
@@ -89,7 +107,9 @@
   {
    "cell_type": "markdown",
    "id": "23fa2b6c",
-   "metadata": {},
+   "metadata": {
+    "id": "23fa2b6c"
+   },
    "source": [
     "Now we can instantiate the Python Elasticsearch client.\n",
     "\n",
@@ -101,7 +121,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "195cc597",
-   "metadata": {},
+   "metadata": {
+    "id": "195cc597"
+   },
    "outputs": [],
    "source": [
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
@@ -122,7 +144,9 @@
   {
    "cell_type": "markdown",
    "id": "b1115ffb",
-   "metadata": {},
+   "metadata": {
+    "id": "b1115ffb"
+   },
    "source": [
     "Confirm that the client has connected with this test:"
    ]
@@ -131,7 +155,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cc0de5ea",
-   "metadata": {},
+   "metadata": {
+    "id": "cc0de5ea"
+   },
    "outputs": [],
    "source": [
     "print(client.info())"
@@ -139,70 +165,84 @@
   },
   {
    "cell_type": "markdown",
-   "id": "659c5890",
-   "metadata": {},
+   "id": "4e9e7354",
+   "metadata": {
+    "id": "4e9e7354"
+   },
    "source": [
     "Refer to [the documentation](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/connecting.html#connect-self-managed-new) to learn how to connect to a self-managed deployment.\n",
     "\n",
-    "Read [this page](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/connecting.html#connect-self-managed-new) to learn how to connect using API keys."
+    "Read [this page](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/connecting.html#connect-self-managed-new) to learn how to connect using API keys.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "840d92f0",
-   "metadata": {},
+   "id": "96788aa1",
+   "metadata": {
+    "id": "96788aa1"
+   },
    "source": [
     "## Create the inference task\n",
     "\n",
     "Let's create the inference task by using the [Create inference API](https://www.elastic.co/guide/en/elasticsearch/reference/current/put-inference-api.html).\n",
     "\n",
-    "You'll need an OpenAI API key for this that you can find in your OpenAI account under the [API keys section](https://platform.openai.com/api-keys). A paid membership is required to complete the steps in this notebook as the OpenAI free trial API usage is limited."
+    "You'll need an Cohere API key for this that you can find in your Cohere account under the [API keys section](https://dashboard.cohere.com/api-keys). A paid membership is required to complete the steps in this notebook as the Cohere free trial API usage is limited."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d007737",
-   "metadata": {},
+   "id": "3e6d98af",
+   "metadata": {
+    "id": "3e6d98af"
+   },
    "outputs": [],
    "source": [
-    "API_KEY = getpass(\"OpenAI API key:  \")\n",
+    "API_KEY = getpass(\"Enter Cohere API key:  \")\n",
     "\n",
     "client.inference.put_model(\n",
     "    task_type=\"text_embedding\",\n",
-    "    model_id=\"my_openai_embedding_model\",\n",
+    "    model_id=\"cohere_embeddings\",\n",
     "    body={\n",
-    "        \"service\": \"openai\",\n",
-    "        \"service_settings\": {\"api_key\": API_KEY},\n",
-    "        \"task_settings\": {\"model\": \"text-embedding-ada-002\"},\n",
+    "        \"service\": \"cohere\",\n",
+    "        \"service_settings\": {\n",
+    "            \"api_key\": API_KEY,\n",
+    "            \"model_id\": \"embed-english-v3.0\",\n",
+    "            \"embedding_type\": \"int8\",\n",
+    "        },\n",
+    "        \"task_settings\": {},\n",
     "    },\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1024d070",
-   "metadata": {},
+   "id": "e5feaf12",
+   "metadata": {
+    "id": "e5feaf12"
+   },
    "source": [
     "## Create an ingest pipeline with an inference processor\n",
     "\n",
-    "Create an ingest pipeline with an inference processor by using the [`put_pipeline`](https://www.elastic.co/guide/en/elasticsearch/reference/master/put-pipeline-api.html) method. Reference the OpenAI model created above to infer against the data that is being ingested in the pipeline."
+    "Create an ingest pipeline with an inference processor by using the [`put_pipeline`](https://www.elastic.co/guide/en/elasticsearch/reference/master/put-pipeline-api.html) method. Reference the Cohere model created above to infer against the data that is being ingested in the pipeline."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ace9e2e",
-   "metadata": {},
+   "id": "c5897fe4",
+   "metadata": {
+    "id": "c5897fe4"
+   },
    "outputs": [],
    "source": [
     "client.ingest.put_pipeline(\n",
-    "    id=\"openai_embeddings_pipeline\",\n",
-    "    description=\"Ingest pipeline for OpenAI inference.\",\n",
+    "    id=\"cohere_embeddings\",\n",
+    "    description=\"Ingest pipeline for Cohere inference.\",\n",
     "    processors=[\n",
     "        {\n",
     "            \"inference\": {\n",
-    "                \"model_id\": \"my_openai_embedding_model\",\n",
+    "                \"model_id\": \"cohere_embeddings\",\n",
     "                \"input_output\": {\n",
     "                    \"input_field\": \"plot\",\n",
     "                    \"output_field\": \"plot_embedding\",\n",
@@ -215,47 +255,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d07567",
-   "metadata": {},
+   "id": "7b6dd89c",
+   "metadata": {
+    "id": "7b6dd89c"
+   },
    "source": [
     "Let's note a few important parameters from that API call:\n",
     "\n",
     "- `inference`: A processor that performs inference using a machine learning model.\n",
-    "- `model_id`: Specifies the ID of the machine learning model to be used. In this example, the model ID is set to `my_openai_embedding_model`. Use the model ID you defined when created the inference task.\n",
+    "- `model_id`: Specifies the ID of the machine learning model to be used. In this example, the model ID is set to `cohere_embeddings`.\n",
     "- `input_output`: Specifies input and output fields.\n",
     "- `input_field`: Field name from which the `dense_vector` representation is created.\n",
-    "- `output_field`:  Field name which contains inference results. "
+    "- `output_field`:  Field name which contains inference results."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "28e12d7a",
-   "metadata": {},
+   "id": "f167c8cf",
+   "metadata": {
+    "id": "f167c8cf"
+   },
    "source": [
     "## Create index\n",
     "\n",
-    "The mapping of the destination index - the index that contains the embeddings that the model will create based on your input text - must be created. The destination index must have a field with the [dense_vector](https://www.elastic.co/guide/en/elasticsearch/reference/current/dense-vector.html) field type to index the output of the OpenAI model.\n",
+    "The mapping of the destination index – the index that contains the embeddings that the model will create based on your input text – must be created. The destination index must have a field with the [dense_vector](https://www.elastic.co/guide/en/elasticsearch/reference/current/dense-vector.html) field type to index the output of the Cohere model.\n",
     "\n",
-    "Let's create an index named `openai-movie-embeddings` with the mappings we need."
+    "Let's create an index named `cohere-movie-embeddings` with the mappings we need."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ddcbca3",
-   "metadata": {},
+   "id": "37558907",
+   "metadata": {
+    "id": "37558907"
+   },
    "outputs": [],
    "source": [
-    "client.indices.delete(index=\"openai-movie-embeddings\", ignore_unavailable=True)\n",
+    "client.indices.delete(index=\"cohere-movie-embeddings\", ignore_unavailable=True)\n",
     "client.indices.create(\n",
-    "    index=\"openai-movie-embeddings\",\n",
-    "    settings={\"index\": {\"default_pipeline\": \"openai_embeddings_pipeline\"}},\n",
+    "    index=\"cohere-movie-embeddings\",\n",
+    "    settings={\"index\": {\"default_pipeline\": \"cohere_embeddings\"}},\n",
     "    mappings={\n",
     "        \"properties\": {\n",
     "            \"plot_embedding\": {\n",
     "                \"type\": \"dense_vector\",\n",
-    "                \"dims\": 1536,\n",
-    "                \"similarity\": \"dot_product\",\n",
+    "                \"dims\": 1024,\n",
+    "                \"element_type\": \"byte\",\n",
     "            },\n",
     "            \"plot\": {\"type\": \"text\"},\n",
     "        }\n",
@@ -265,19 +311,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07c187a9",
-   "metadata": {},
+   "id": "e9d4bfd2",
+   "metadata": {
+    "id": "e9d4bfd2"
+   },
    "source": [
     "## Insert Documents\n",
     "\n",
-    "Let's insert our example dataset of 12 movies. You need a paid OpenAI account to complete this step, otherwise the documentation ingest will time out due to the API request rate limits."
+    "Let's insert our example dataset of 12 movies. You need a paid Cohere account to complete this step, otherwise the documentation ingest will time out due to the API request rate limits."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d68737cb",
-   "metadata": {},
+   "id": "cfa8eda5",
+   "metadata": {
+    "id": "cfa8eda5"
+   },
    "outputs": [],
    "source": [
     "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/notebooks/search/movies.json\"\n",
@@ -291,7 +341,7 @@
     "for doc in data_json:\n",
     "    documents.append(\n",
     "        {\n",
-    "            \"_index\": \"openai-movie-embeddings\",\n",
+    "            \"_index\": \"cohere-movie-embeddings\",\n",
     "            \"_source\": doc,\n",
     "        }\n",
     "    )\n",
@@ -299,14 +349,16 @@
     "# Use helpers.bulk to index\n",
     "helpers.bulk(client, documents)\n",
     "\n",
-    "print(\"Done indexing documents into `openai-movie-embeddings` index!\")\n",
+    "print(\"Done indexing documents into `cohere-movie-embeddings` index!\")\n",
     "time.sleep(3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cf0f6df7",
-   "metadata": {},
+   "id": "a68e808e",
+   "metadata": {
+    "id": "a68e808e"
+   },
    "source": [
     "## Semantic search\n",
     "\n",
@@ -315,23 +367,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d9b21b71",
-   "metadata": {},
+   "execution_count": 19,
+   "id": "a47cdc60",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "a47cdc60",
+    "outputId": "50bcf162-1fdd-4fb6-847f-917d7f106785"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.91674197\n",
+      "Score: 0.69965357\n",
       "Title: Fight Club\n",
       "Plot: An insomniac office worker and a devil-may-care soapmaker form an underground fight club that evolves into something much, much more.\n",
       "\n",
-      "Score: 0.9069592\n",
+      "Score: 0.6612531\n",
       "Title: Pulp Fiction\n",
       "Plot: The lives of two mob hitmen, a boxer, a gangster and his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.\n",
       "\n",
-      "Score: 0.8992071\n",
+      "Score: 0.6171736\n",
       "Title: The Dark Knight\n",
       "Plot: When the menace known as the Joker wreaks havoc and chaos on the people of Gotham, Batman must accept one of the greatest psychological and physical tests of his ability to fight injustice.\n",
       "\n"
@@ -340,13 +398,13 @@
    ],
    "source": [
     "response = client.search(\n",
-    "    index=\"openai-movie-embeddings\",\n",
+    "    index=\"cohere-movie-embeddings\",\n",
     "    size=3,\n",
     "    knn={\n",
     "        \"field\": \"plot_embedding\",\n",
     "        \"query_vector_builder\": {\n",
     "            \"text_embedding\": {\n",
-    "                \"model_id\": \"my_openai_embedding_model\",\n",
+    "                \"model_id\": \"cohere_embeddings\",\n",
     "                \"model_text\": \"Fighting movie\",\n",
     "            }\n",
     "        },\n",
@@ -365,6 +423,9 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
