--- a/notebooks/integrations/gemma/rag-gemma-huggingface-elastic.ipynb
+++ b/notebooks/integrations/gemma/rag-gemma-huggingface-elastic.ipynb
@@ -191,7 +191,9 @@
     "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
     "    es_api_key=ELASTIC_API_KEY,\n",
     "    index_name=elastic_index_name,\n",
-    "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy(model_id=\".elser_model_2\"),\n",
+    "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy(\n",
+    "        model_id=\".elser_model_2\"\n",
+    "    ),\n",
     ")\n",
     "\n",
     "es"
