Changes model_id path parameter to inference_id in openAI and Cohere notebooks.

--- a/notebooks/integrations/cohere/inference-cohere.ipynb
+++ b/notebooks/integrations/cohere/inference-cohere.ipynb
@@ -204,7 +204,7 @@
     "\n",
     "client.inference.put_model(\n",
     "    task_type=\"text_embedding\",\n",
-    "    model_id=\"cohere_embeddings\",\n",
+    "    inference_id=\"cohere_embeddings\",\n",
     "    body={\n",
     "        \"service\": \"cohere\",\n",
     "        \"service_settings\": {\n",
@@ -244,7 +244,7 @@
     "    processors=[\n",
     "        {\n",
     "            \"inference\": {\n",
-    "                \"model_id\": \"cohere_embeddings\",\n",
+    "                \"inference_id\": \"cohere_embeddings\",\n",
     "                \"input_output\": {\n",
     "                    \"input_field\": \"plot\",\n",
     "                    \"output_field\": \"plot_embedding\",\n",
@@ -265,7 +265,7 @@
     "Let's note a few important parameters from that API call:\n",
     "\n",
     "- `inference`: A processor that performs inference using a machine learning model.\n",
-    "- `model_id`: Specifies the ID of the machine learning model to be used. In this example, the model ID is set to `cohere_embeddings`.\n",
+    "- `inference_id`: Specifies the ID of the inference entity to be used. In this example, the inference ID is set to `cohere_embeddings`.\n",
     "- `input_output`: Specifies input and output fields.\n",
     "- `input_field`: Field name from which the `dense_vector` representation is created.\n",
     "- `output_field`:  Field name which contains inference results."
@@ -406,7 +406,7 @@
     "        \"field\": \"plot_embedding\",\n",
     "        \"query_vector_builder\": {\n",
     "            \"text_embedding\": {\n",
-    "                \"model_id\": \"cohere_embeddings\",\n",
+    "                \"inference_id\": \"cohere_embeddings\",\n",
     "                \"model_text\": \"Fighting movie\",\n",
     "            }\n",
     "        },\n",
