--- a/notebooks/search/07-inference.ipynb
+++ b/notebooks/search/07-inference.ipynb
@@ -25,7 +25,7 @@
     "- An Elastic deployment:\n",
     "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "\n",
-    "- Elasticsearch 8.12 or above.\n",
+    "- Elasticsearch 8.13 or above.\n",
     "   \n",
     "- A paid [OpenAI account](https://openai.com/) is required to use the Inference API with \n",
     "the OpenAI service as the OpenAI free trial API usage is limited. "
@@ -172,7 +172,7 @@
     "\n",
     "client.inference.put_model(\n",
     "    task_type=\"text_embedding\",\n",
-    "    model_id=\"my_openai_embedding_model\",\n",
+    "    inference_id=\"my_openai_embedding_model\",\n",
     "    body={\n",
     "        \"service\": \"openai\",\n",
     "        \"service_settings\": {\"api_key\": API_KEY},\n",
@@ -204,7 +204,7 @@
     "    processors=[\n",
     "        {\n",
     "            \"inference\": {\n",
-    "                \"model_id\": \"my_openai_embedding_model\",\n",
+    "                \"inference_id\": \"my_openai_embedding_model\",\n",
     "                \"input_output\": {\n",
     "                    \"input_field\": \"plot\",\n",
     "                    \"output_field\": \"plot_embedding\",\n",
@@ -223,7 +223,7 @@
     "Let's note a few important parameters from that API call:\n",
     "\n",
     "- `inference`: A processor that performs inference using a machine learning model.\n",
-    "- `model_id`: Specifies the ID of the machine learning model to be used. In this example, the model ID is set to `my_openai_embedding_model`. Use the model ID you defined when created the inference task.\n",
+    "- `inference_id`: Specifies the ID of the inference entity to be used. In this example, the inference ID is set to `my_openai_embedding_model`. Use the inference ID you defined when created the inference task.\n",
     "- `input_output`: Specifies input and output fields.\n",
     "- `input_field`: Field name from which the `dense_vector` representation is created.\n",
     "- `output_field`:  Field name which contains inference results. "
@@ -348,7 +348,7 @@
     "        \"field\": \"plot_embedding\",\n",
     "        \"query_vector_builder\": {\n",
     "            \"text_embedding\": {\n",
-    "                \"model_id\": \"my_openai_embedding_model\",\n",
+    "                \"inference_id\": \"my_openai_embedding_model\",\n",
     "                \"model_text\": \"Fighting movie\",\n",
     "            }\n",
     "        },\n",
