--- a/notebooks/integrations/cohere/inference-cohere.ipynb
+++ b/notebooks/integrations/cohere/inference-cohere.ipynb
@@ -184,9 +184,9 @@
     "id": "96788aa1"
    },
    "source": [
-    "## Create the inference task\n",
+    "## Create the inference endpoint\n",
     "\n",
-    "Let's create the inference task by using the [Create inference API](https://www.elastic.co/guide/en/elasticsearch/reference/current/put-inference-api.html).\n",
+    "Let's create the inference endpoint by using the [Create inference API](https://www.elastic.co/guide/en/elasticsearch/reference/current/put-inference-api.html).\n",
     "\n",
     "You'll need an Cohere API key for this that you can find in your Cohere account under the [API keys section](https://dashboard.cohere.com/api-keys). A paid membership is required to complete the steps in this notebook as the Cohere free trial API usage is limited."
    ]
@@ -226,7 +226,7 @@
    "source": [
     "## Create an ingest pipeline with an inference processor\n",
     "\n",
-    "Create an ingest pipeline with an inference processor by using the [`put_pipeline`](https://www.elastic.co/guide/en/elasticsearch/reference/master/put-pipeline-api.html) method. Reference the Cohere model created above to infer against the data that is being ingested in the pipeline."
+    "Create an ingest pipeline with an inference processor by using the [`put_pipeline`](https://www.elastic.co/guide/en/elasticsearch/reference/master/put-pipeline-api.html) method. Reference the inference endpoint created above as the `model_id` to infer against the data that is being ingested in the pipeline."
    ]
   },
   {
@@ -244,7 +244,7 @@
     "    processors=[\n",
     "        {\n",
     "            \"inference\": {\n",
-    "                \"inference_id\": \"cohere_embeddings\",\n",
+    "                \"model_id\": \"cohere_embeddings\",\n",
     "                \"input_output\": {\n",
     "                    \"input_field\": \"plot\",\n",
     "                    \"output_field\": \"plot_embedding\",\n",
@@ -265,7 +265,7 @@
     "Let's note a few important parameters from that API call:\n",
     "\n",
     "- `inference`: A processor that performs inference using a machine learning model.\n",
-    "- `inference_id`: Specifies the ID of the inference entity to be used. In this example, the inference ID is set to `cohere_embeddings`.\n",
+    "- `model_id`: Specifies the ID of the inference endpoint to be used. In this example, the model ID is set to `cohere_embeddings`.\n",
     "- `input_output`: Specifies input and output fields.\n",
     "- `input_field`: Field name from which the `dense_vector` representation is created.\n",
     "- `output_field`:  Field name which contains inference results."
