--- a/notebooks/search/07-inference.ipynb
+++ b/notebooks/search/07-inference.ipynb
@@ -25,7 +25,7 @@
     "- An Elastic deployment:\n",
     "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "\n",
-    "- Elasticsearch 8.13 or above.\n",
+    "- Elasticsearch 8.12 or above.\n",
     "   \n",
     "- A paid [OpenAI account](https://openai.com/) is required to use the Inference API with \n",
     "the OpenAI service as the OpenAI free trial API usage is limited. "
@@ -179,6 +179,14 @@
     "        \"task_settings\": {\"model\": \"text-embedding-ada-002\"},\n",
     "    },\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f2e48b7",
+   "metadata": {},
+   "source": [
+    "**NOTE:** If you use Elasticsearch 8.12, you must change `inference_id` in the snippet above to `model_id`! "
    ]
   },
   {
@@ -364,6 +372,20 @@
     "    plot = hit[\"_source\"][\"plot\"]\n",
     "    print(f\"Score: {score}\\nTitle: {title}\\nPlot: {plot}\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e4055ba",
+   "metadata": {},
+   "source": [
+    "**NOTE:** If you use Elasticsearch 8.12, you must change `inference_id` in the snippet above to `model_id`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59220b82",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
