--- a/notebooks/esql/esql-getting-started.ipynb
+++ b/notebooks/esql/esql-getting-started.ipynb
@@ -1155,7 +1155,7 @@
     "# Put the enrich policy\n",
     "client.enrich.put_policy(name=\"clientip_policy\", body=policy)\n",
     "\n",
-    "# Execute the enrich policy without waiting for completion\n",
+    "# Execute the enrich policy and wait for completion\n",
     "client.enrich.execute_policy(name=\"clientip_policy\", wait_for_completion=True)"
    ]
   },
