--- a/notebooks/enterprise-search/app-search-engine-exporter.ipynb
+++ b/notebooks/enterprise-search/app-search-engine-exporter.ipynb
@@ -8,7 +8,17 @@
       "source": [
         "# App Search Engine exporter to Elasticsearch\n",
         "\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/integrations/enterprise-search/app-search-engine-exporter.ipynb)\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/markjhoy/elasticsearch-labs/blob/markjhoy/add_app_search_export_notebook/notebooks/enterprise-search/app-search-engine-exporter.ipynb)\n",
+        "\n",
+        "<details>\n",
+        "<summary>TODO: before merging, use the \"final\" Colab URL here</summary>\n",
+        "Note - using my branch for the Colab link above - before merging, use the final URL below: \n",
+        "\n",
+        "```\n",
+        "https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/integrations/enterprise-search/app-search-engine-exporter.ipynb\n",
+        "```\n",
+        "\n",
+        "</details>\n",
         "\n",
         "This notebook explains the steps of exporting an App Search engine together with its configurations in Elasticsearch. This is not meant to be an exhaustive example for all App Search features as those will vary based on your instance, but is meant to give a sense of how you can export, migrate, and enhance your application.\n",
         "\n",
@@ -159,7 +169,7 @@
         "\n",
         "To export App Search curations we will use Elasticsearch [query rules](https://www.elastic.co/guide/en/elasticsearch/reference/current/search-using-query-rules.html).\n",
         "At the moment of writing this notebook Elasticsearch query rules only allow for pinning results unlike App Search curations that also allow excluding results.\n",
-        "For this reason we will only export pinned results. The code below will create the necessary `query_rules` to achieve this."
+        "For this reason we will only export pinned results. The code below will create the necessary `query_rules` to achieve this. Note that there is a default soft limit of 100 curations for `query_rules` that can be configured up to a hard limit of 1,000."
       ]
     },
     {
