Pin eland to 8.12.1 to avoid build failures

--- a/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
+++ b/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
@@ -47,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m pip install sentence-transformers eland elasticsearch transformers"
+    "!python3 -m pip install sentence-transformers eland==8.12.1 elasticsearch transformers"
    ]
   },
   {
@@ -339,21 +339,6 @@
       "\n",
       "['Keeping up with Kibana: This week in Kibana for November 29th, 2019']\n",
       "Score: 0.35690257\n",
-      "\n",
-      "['How to implement similarity image search | Elastic.co | Elastic Blog']\n",
-      "Score: 0.34473613\n",
-      "\n",
-      "['Kibana 4 Video Tutorials, Part 3']\n",
-      "Score: 0.34193927\n",
-      "\n",
-      "['Introducing approximate nearest neighbor search in Elasticsearch 8.0 | Elastic Blog']\n",
-      "Score: 0.3372936\n",
-      "\n",
-      "['Where in the World is Elastic? - QCon Beijing, Devoxx France, Percona Live & AWS Summit Chicago']\n",
-      "Score: 0.33645985\n",
-      "\n",
-      "['EQL for the masses']\n",
-      "Score: 0.3207562\n",
       "\n"
      ]
     }
@@ -365,7 +350,7 @@
     "\n",
     "query = {\n",
     "    \"field\": \"text_embedding.predicted_value\",\n",
-    "    \"k\": 10,\n",
+    "    \"k\": 5,\n",
     "    \"num_candidates\": 50,\n",
     "    \"query_vector_builder\": {\n",
     "        \"text_embedding\": {\n",
