--- a/notebooks/search/00-quick-start.ipynb
+++ b/notebooks/search/00-quick-start.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f38e0397",
    "metadata": {
     "colab": {
@@ -137,17 +137,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cb6ad7e9-0636-4cf3-a803-bf160fe16b33",
+   "metadata": {},
+   "source": [
+    "### Enable Telemetry\n",
+    "\n",
+    "Knowing that you are using this notebook helps us decide where to invest our efforts to improve our products. We would like to ask you that you run the following code to let us gather anonymous usage statistics. See [telemetry.py](https://github.com/elastic/elasticsearch-labs/blob/main/telemetry/telemetry.py) for details. Thank you!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b04f442-729d-406d-b826-654483498df6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!curl -O -s https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/telemetry/telemetry.py\n",
+    "!curl -O -s https://raw.githubusercontent.com/miguelgrinberg/elasticsearch-labs/notebook-telemetry/telemetry/telemetry.py\n",
+    "from telemetry import enable_telemetry\n",
+    "\n",
+    "enable_telemetry(client)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d12b707c-e89d-4b43-bee5-edb1beb84839",
+   "metadata": {},
+   "source": [
+    "### Test the Client"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1462ebd8",
    "metadata": {
     "id": "1462ebd8"
    },
    "source": [
-    "Confirm that the client has connected with this test."
+    "Before you continue, confirm that the client has connected with this test."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "25c618eb",
    "metadata": {
     "colab": {
@@ -161,7 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'instance-0000000011', 'cluster_name': 'd1bd36862ce54c7b903e2aacd4cd7f0a', 'cluster_uuid': 'tIkh0X_UQKmMFQKSfUw-VQ', 'version': {'number': '8.9.0', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '8aa461beb06aa0417a231c345a1b8c38fb498a0d', 'build_date': '2023-07-19T14:43:58.555259655Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+      "{'name': 'instance-0000000000', 'cluster_name': 'a72482be54904952ba46d53c3def7740', 'cluster_uuid': 'g8BE52TtT32pGBbRzP_oKA', 'version': {'number': '8.12.2', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '48a287ab9497e852de30327444b0809e55d46466', 'build_date': '2024-02-19T10:04:32.774273190Z', 'build_snapshot': False, 'lucene_version': '9.9.2', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
      ]
     }
    ],
@@ -591,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
